# deeplearning_models

./: .gitignore  README.md  pyproject.toml
models/: autoregressive_model.pt  rnn_model.pt
src/: test_run.py
src/cnn_models/: cnn_CIFAR10.py
src/rnn_models/: simple_rnn_model.py  tiny_autoregressive_model.py
